--- a/Opdracht1/Opdracht1.csproj
+++ b/Opdracht1/Opdracht1.csproj
@@ -44,6 +44,7 @@
     <Compile Include="Creature.cs" />
     <Compile Include="Dungeon.cs" />
     <Compile Include="DungeonGenerator.cs" />
+    <Compile Include="DungeonGenerator2.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="HealingPotion.cs" />
     <Compile Include="Item.cs" />
