Game serialization done

--- a/Opdracht1/Opdracht1.csproj
+++ b/Opdracht1/Opdracht1.csproj
@@ -46,6 +46,7 @@
     <Compile Include="DungeonGenerator.cs" />
     <Compile Include="DungeonGenerator2.cs" />
     <Compile Include="Game.cs" />
+    <Compile Include="GameSerializer.cs" />
     <Compile Include="HealingPotion.cs" />
     <Compile Include="Item.cs" />
     <Compile Include="Monster.cs" />
