--- a/Opdracht1/Opdracht1.csproj
+++ b/Opdracht1/Opdracht1.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TimeCrystal.cs" />
     <Compile Include="Zone.cs" />
+    <Compile Include="ZoneGenerator.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
