--- a/Opdracht1Test/Opdracht1Test.csproj
+++ b/Opdracht1Test/Opdracht1Test.csproj
@@ -51,6 +51,7 @@
   </Choose>
   <ItemGroup>
     <Compile Include="DungeonGeneratorTests.cs" />
+    <Compile Include="GameSerializerTests.cs" />
     <Compile Include="ItemSpawnerTests.cs" />
     <Compile Include="MonsterSpawnerTests.cs" />
     <Compile Include="PlayerTests.cs" />
