--- a/Opdracht1Test/Opdracht1Test.csproj
+++ b/Opdracht1Test/Opdracht1Test.csproj
@@ -56,6 +56,7 @@
     <Compile Include="MonsterSpawnerTests.cs" />
     <Compile Include="PlayerTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TurnTests.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Opdracht1\Opdracht1.csproj">
