--- a/Opdracht1/Opdracht1.csproj
+++ b/Opdracht1/Opdracht1.csproj
@@ -57,6 +57,7 @@
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TimeCrystal.cs" />
+    <Compile Include="Turn.cs" />
     <Compile Include="Zone.cs" />
   </ItemGroup>
   <ItemGroup>
