--- a/Opdracht1/Opdracht1.csproj
+++ b/Opdracht1/Opdracht1.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TimeCrystal.cs" />
     <Compile Include="Turn.cs" />
+    <Compile Include="TurnBot.cs" />
     <Compile Include="Zone.cs" />
   </ItemGroup>
   <ItemGroup>
