--- a/SystemTests/SystemTests.csproj
+++ b/SystemTests/SystemTests.csproj
@@ -45,7 +45,9 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Specifications\GuaranteedNumberOfCombats.cs" />
     <Compile Include="Specifications\ISpecification.cs" />
+    <Compile Include="Specifications\KPAndNumberOfMonsterConstant.cs" />
     <Compile Include="Specifications\MaxMonstersInNode.cs" />
     <Compile Include="Specifications\MonsterDoesntLeaveZone.cs" />
     <Compile Include="Specifications\MonstersDontMoveAway.cs" />
