--- a/SystemTests/SystemTests.csproj
+++ b/SystemTests/SystemTests.csproj
@@ -43,8 +43,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="FileInputReader.cs" />
+    <Compile Include="GameLoader.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RecordingLoader.cs" />
     <Compile Include="Specifications\GuaranteedNumberOfCombats.cs" />
     <Compile Include="Specifications\ISpecification.cs" />
     <Compile Include="Specifications\KPAndNumberOfMonsterConstant.cs" />
