--- a/Opdracht1/Rogue.csproj
+++ b/Opdracht1/Rogue.csproj
@@ -55,6 +55,7 @@
     <Compile Include="DomainObjects\Zone.cs" />
     <Compile Include="Game.cs" />
     <Compile Include="GameState.cs" />
+    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Recorder.cs" />
