--- a/SystemTests/SystemTests.csproj
+++ b/SystemTests/SystemTests.csproj
@@ -45,6 +45,7 @@
   <ItemGroup>
     <Compile Include="FileInputReader.cs" />
     <Compile Include="GameLoader.cs" />
+    <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RecordingLoader.cs" />
